test/earlyReturn.slq

def foo(const x:ğ”¹){
	if x{
		return 1:!ğ”¹; // error
	}else{
		return 0:!ğ”¹; // error
	}
}
def main(){
	x:=H(0:ğ”¹);
	while foo(x){}
	return x;
}
